user_posts, dashboard, round of simplifying need to clean

--- a/client/nav.jade
+++ b/client/nav.jade
@@ -74,12 +74,12 @@ template(name='nav')
                 a.pointer.zoom.item(href="/login" title='login')
                     i.large.sign.in.icon
                     // |enter
-    .ui.large.breadcrumb
-        .section home
-        .divider \
-        .section store
-        .divider \
-        .active.section t-shirt
+    // .ui.large.breadcrumb
+    //     .section home
+    //     .divider \
+    //     .section store
+    //     .divider \
+    //     .active.section t-shirt
 
 
 
