hide profile section tabs, put dao in?

--- a/client/nav.jade
+++ b/client/nav.jade
@@ -25,8 +25,8 @@ template(name='nav')
                     i.clock.large.icon
                 a.icon.item.zoom.pointer(href="/shop")
                     i.store.large.icon
-                // a.icon.item.zoom.pointer(href="/tribes")
-                //     i.fire.large.icon
+                a.icon.item.zoom.pointer(href="/tribes")
+                    i.fire.large.icon
                 a.icon.item.zoom.pointer(href="/mail")
                     i.envelope.grey.large.icon
                 a.icon.item.zoom.pointer(href="/one")
