v1 ask question on other profile, more post meta actions, nav icons, profile section buttons return

--- a/client/client.jade
+++ b/client/client.jade
@@ -68,7 +68,7 @@ template(name='layout')
     
     
 template(name='ad')
-    .ui.fluid.segment
+    .ui.fluid.inverted.segment
         .ui.header ad
 
 
