--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -97,7 +97,7 @@ template(name='session_edit_value_button')
     .ui.circular.zoom.button.set_session_value(class=calculated_class)
         if icon
             // i.icon(class=icon)
-            +i name=icon cl='ui image'
+            +i name=icon cl='ui mini image'
         // if label
         //     |#{label}
         // else 
