--- a/client/nav.jade
+++ b/client/nav.jade
@@ -6,60 +6,60 @@ template(name='nav')
             i.big.link.yin.yang.grey.icon
         if currentUser
             if connected
-                a.icon.item.zoom.pointer.set_root(href="/m/model" class="{{isActivePath '/m/model'}}")
+                a.icon.item.pointer.set_root(href="/m/model" class="{{isActivePath '/m/model'}}")
                     i.large.database.icon
                 if is_admin
-                    // .item.zoom.pointer
+                    // .item.pointer
                     //     .ui.green.header not connected
-                // .icon.item.zoom.pointer
+                // .icon.item.pointer
                 //     i.wikipedia.large.icon
-                // .icon.item.zoom.pointer
+                // .icon.item.pointer
                 //     i.reddit.large.icon
-                // .icon.item.zoom.pointer
+                // .icon.item.pointer
                 //     i.video.large.icon
-                // a.icon.item.zoom.pointer(href="/rentals")
+                // a.icon.item.pointer(href="/rentals")
                 //     i.bitcoin.large.icon
-                // a.icon.item.zoom.pointer(href="/rentals")
+                // a.icon.item.pointer(href="/rentals")
                 //     i.biohazard.large.icon
-                a.icon.item.zoom.pointer(href="/rentals")
+                a.icon.item.pointer(href="/rentals")
                     i.clock.large.icon
-                a.icon.item.zoom.pointer(href="/shop")
+                a.icon.item.pointer(href="/shop")
                     i.store.large.icon
-                a.icon.item.zoom.pointer(href="/tribes")
+                a.icon.item.pointer(href="/tribes")
                     i.fire.large.icon
-                a.icon.item.zoom.pointer(href="/mail")
+                a.icon.item.pointer(href="/mail")
                     i.envelope.grey.large.icon
-                a.icon.item.zoom.pointer(href="/one")
+                a.icon.item.pointer(href="/one")
                     i.circle.large.icon
                 // a.icon.item.zoom.pointer(href="/ph")
                 //     i.exclamation.large.icon
             else
-                .item.zoom.pointer
+                .item.pointer
                     i.yin.yang.loading.big.grey.icon
                     +status    
         .right.menu
             if connected
-                a.icon.pointer.zoom.item.post(title='add')
+                a.icon.pointer.item.post(title='add')
                     i.large.plus.icon
             if currentUser
                 if connected
                     if unread_count
-                        a.pointer.zoom.item.alerts.select_term(href="#" class=alert_toggle_class)
+                        a.pointer.item.alerts.select_term(href="#" class=alert_toggle_class)
                             i.large.bell.icon
                             if unread_count
                                 |#{unread_count}
                     else
-                        a.icon.pointer.zoom.item(href="/inbox" class="{{isActiveRoute 'inbox'}}")
+                        a.icon.pointer.item(href="/inbox" class="{{isActiveRoute 'inbox'}}")
                             i.large.outline.bell.icon
-            a.icon.pointer.zoom.item(href="/chat" title='chat') 
+            a.icon.pointer.item(href="/chat" title='chat') 
                 i.chat.outline.large.icon
-            // a.icon.pointer.zoom.item(href="/u/#{currentUser.username}/messages" class="{{isActivePath 'user_messages'}}" title="#{user.username} messages")
+            // a.icon.pointer.item(href="/u/#{currentUser.username}/messages" class="{{isActivePath 'user_messages'}}" title="#{user.username} messages")
             if is_dev 
-                .icon.pointer.zoom.item
+                .icon.pointer.item
                     i.large.code.icon
                 
             if currentUser
-                a.large.pointer.zoom.item(href="/u/#{currentUser.username}" class="{{isActiveRoute 'profile'}}")
+                a.large.pointer.item(href="/u/#{currentUser.username}" class="{{isActiveRoute 'profile'}}")
                     //- i.large.user.large.icon
                     |{{money_format currentUser.points}}c
                     |&nbsp;
@@ -71,7 +71,7 @@ template(name='nav')
                 // a.icon.large.item.toggle_rightbar.select_term
                 //     i.bars.large.icon
             else
-                a.pointer.zoom.item(href="/login" title='login')
+                a.pointer.item(href="/login" title='login')
                     i.large.sign.in.icon
                     // |enter
     // .ui.large.breadcrumb
@@ -140,7 +140,7 @@ template(name='role_switcher')
 template(name='chatpop')
     if viewing_chat
         .chatpop.invert
-            .ui.invert.pointer.grey.header.close_chat 
+            a.ui.invert.pointer.grey.header.close_chat 
                 i.chat.icon
                 |chat
             .ui.large.list.smallscroll
