--- a/client/styles.css
+++ b/client/styles.css
@@ -27,6 +27,7 @@ p {
 }
 
 .chatpop {
+  border-radius: 10px !important;
   display: block;
   position: fixed;
   min-width:200px;
@@ -364,7 +365,7 @@ a.goto_article {
     cursor: pointer !important;
     /* color: black !important; */
     /* font-size: 130% !important; */
-    zoom: 110% !important;
+    /*zoom: 110% !important;*/
     /* padding-top: 5em !important; */
     /*transform: scale(1.) !important;*/
     z-index: 1000 !important;
