--- a/client/nav.jade
+++ b/client/nav.jade
@@ -124,6 +124,8 @@ template(name='footer')
                 .ui.center.aligned.inverted.header
                     i.copyright.outline.icon
                     |dao
+                    
+                    
 template(name='role_switcher')
     .ui.segment
         .ui.grey.inline.center.aligned.small.header 
@@ -147,20 +149,25 @@ template(name='role_switcher')
 
 template(name='chatpop')
     if viewing_chat
-        .chatpop.invert
-            a.ui.invert.pointer.grey.header.close_chat 
-                i.chat.icon
-                |chat
-            .ui.large.list.smallscroll
-                each last_messages
-                    .item #{body}
-                        small #{when}
-            .ui.fluid.icon.transparent.input 
-                i.plus.icon
-                input.add_chat(type='text' placeholder='chat...')
+        +view_chatpop
     else 
         .ui.large.circular.icon.invert.button.open_chat
             i.chat.outline.large.icon
+
+template(name='view_chatpop')
+    .chatpop.invert
+        a.ui.invert.pointer.grey.header.close_chat 
+            i.chat.icon
+            |chat
+        .ui.large.list.smallscroll
+            each last_messages
+                .item #{body}
+                    small #{when}
+        .ui.fluid.icon.transparent.input 
+            i.plus.icon
+            input.add_chat(type='text' placeholder='chat...')
+
+
 
 template(name='topbar')
     .ui.fluid.large.attached.segment
