--- a/client/home.jade
+++ b/client/home.jade
@@ -1,25 +1,58 @@
 template(name='home')
-    .ui.header questions
-    .ui.icon.input
-        i.search.icon
-        input.search_questions(type='text' placeholder='search questions')
-    .ui.icon.input
-        i.plus.icon
-        input.ask_question(type='text' placeholder='ask question')
-    each questions
-        .ui.segment
-            .ui.header.select_question #{title}
-            .ui.list 
-                .item #{views} views
-                .item 
-                    i.user.outline.icon
-                    |#{_author.username}
-                .item 
-                    |bounty: 
-                    |#{bounty}pts
-                .item 
-                    each tags 
-                        .ui.label #{this}
+    .ui.grid
+        .four.wide.column
+            .ui.inline.header questions
+            .ui.icon.input
+                i.search.icon
+                input.search_questions(type='text' placeholder='search questions')
+            .ui.icon.input
+                i.plus.icon
+                input.ask_question(type='text' placeholder='ask question')
+        .twelve.wide.column
+            each questions
+                +question
+                
+template(name='question')
+    .ui.segment
+        .ui.header.select_question #{title}
+        .ui.list 
+            .item #{views} views
+            .item 
+                i.user.outline.icon
+                |#{_author.username}
+            .item 
+                |bounty: 
+                |#{bounty}pts
+            .item 
+                each tags 
+                    .ui.label #{this}
+        .ui.big.circular.icon.compact.button.vote_true(class=vote_true_class)
+            i.thumbs.up.icon(class=vote_true_icon_class)
+        .ui.big.circular.icon.compact.button.vote_false(class=vote_false_class)
+            i.thumbs.down.icon(class=vote_false_icon_class)
+        if can_edit
+            +session_key_value_edit key='edit_question_id' value=_id label='edit'
+        if session_key_value_is 'edit_question_id' _id
+            .ui.inline.header editing
+            +text_edit key='title' direct=true
+            +number_edit key='bounty' direct=true
+            +session_key_value_edit key='edit_question_id' value=null label='save'
+            // +key_value_edit key='question_type' value='true_false' label='true/false'
+            // +key_value_edit key='question_type' value='multiple_choice' label='multiple choice'
+            // if key_value_is 'question_type' 'multiple_choice'
+            //     // +number_edit key='answer_count' label='number of answers' direct=true
+            //     // each answers
+            //     +text_edit key='answer_choice_one' label='answer choice one' direct=true
+            //     +text_edit key='answer_choice_two' label='answer choice two' direct=true
+        
+template(name='session_key_value_edit')    
+    .ui.button.set_session_var
+        |#{label}
+                        
+// template(name='key_value_edit')    
+//     .ui.button.set_key_value
+//         |#{label}
+                        
 
 template(name='old_home')
     // iframe(frameborder="0" width="400" height="200" src="https://drive.google.com/file/d/1_encX_RKyZhOU26r7_cNTtl0rLvEQSai/preview")
