remove delta and mail

--- a/client/questions.jade
+++ b/client/questions.jade
@@ -5,9 +5,9 @@ template(name='questions')
             .ui.icon.input
                 i.search.icon
                 input.search_questions(type='text' placeholder='search questions')
-            .ui.icon.input
-                i.plus.icon
-                input.ask_question(type='text' placeholder='ask question')
+            // .ui.icon.input
+            //     i.plus.icon
+            //     input.ask_question(type='text' placeholder='ask question')
             .ui.header total bounty available
             .ui.header total bounty earned
             +session_boolean_toggle key='view_open' label='view open'
